--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -54,6 +54,11 @@
         android:title="@string/action_linked_browsers"
         app:showAsAction="never" />
     <item
+        android:id="@+id/action_refresh_linked_browsers"
+        android:orderInCategory="100"
+        android:title="RefreshLinked"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_about"
         android:orderInCategory="110"
         android:title="@string/action_about"
