--- a/app/src/main/res/layout/activity_browser_request_approve.xml
+++ b/app/src/main/res/layout/activity_browser_request_approve.xml
@@ -32,7 +32,7 @@
             <ImageView
                 android:id="@+id/profile_icon"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="96dp"
                 android:padding="10dp"
                 android:src="@drawable/ic_info_outline_black_24dp"></ImageView>
 
